--- a/ch03/src/main/webapp/ex01.html
+++ b/ch03/src/main/webapp/ex01.html
@@ -4,17 +4,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>마진과 패딩</title>
 <style type="text/css">
-*	{margin:0; padding: 0 }
-body {
+*		{margin: 0; padding: 0}
+body	{
 	font-family: "돋움", "맑은 고딕";
 	font-size: 0.8em;
 	color: #333;
 }
-
-.box1 {
+.box1	{
 	border: 1px solid #666;
 	width: 300px;
 	background-color: #FFC;
+	cursor: pointer;
 	
 	padding-top: 10px;
 	padding-right: 10px;
@@ -22,22 +22,29 @@ body {
 	padding-left: 10px;
 	
 	padding: 10px 20px 30px 40px; /* T R B L */
-	padding: 10px 20px 30px; /* T (R, L) B */
-	padding: 10px 20px; /* (T, B), (R, L)  */
-	padding: 10px; /* (T, R, B, L) */
+	padding: 10px 20px 30px; /* T (R,L) B */
+	padding: 10px 20px; /* (T,B) (R,L)*/
+	padding: 10px; /* (T,R,B,L)*/
+
+	margin-top: 10px;
+	margin-right: 10px;
+	margin-bottom: 10px;
+	margin-left: 10px;
 	
-	padding-top: 10px;
-	padding-right: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
-	
+	margin: 100px; /* (T,B,R,L) */
+	margin: 100px auto; /* (T,B) (R,L) */
+	margin: 100px auto 300px; /* T (R,L) B */
 	margin: 100px auto 300px auto; /* T R B L */
 }
 </style>
+<script>
+	box = document.getElementById("box");
+	console.log(box);
+</script>
 </head>
 
 <body>
-	<div class="box1">
+	<div class="box1" id="box">
 		CSS에서 가장 보편적이고 많이 사용하는 마진과 패딩에 대한 값이 어떻게 적용되는지 확인해 보겠습니다.
 	</div>
 </body>
