--- a/ch03/src/main/webapp/ex01.html
+++ b/ch03/src/main/webapp/ex01.html
@@ -38,13 +38,28 @@ body	{
 }
 </style>
 <script>
-	box = document.getElementById("box");
-	console.log(box);
+window.onload = function() {
+	elDev = document.getElementById("box");
+	elDev.onclick = function() {
+		marginTop = parseInt(elDev.style.marginTop);
+		console.log(marginTop);
+	};
+};
+
+count = 0;
+intervalId = setInterVal(function() {
+	if(++count >= 10) {	
+		clearInterval(intervalId);
+		return;
+	}
+	console.log("time out!");
+}, 500);
+
 </script>
 </head>
 
 <body>
-	<div class="box1" id="box">
+	<div class="box1" id="box" style="margin-top:100px">
 		CSS에서 가장 보편적이고 많이 사용하는 마진과 패딩에 대한 값이 어떻게 적용되는지 확인해 보겠습니다.
 	</div>
 </body>
